--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
     cursor: pointer;
     border-radius: 8px;
     font-size: 18px;
-    color: maroon;
+    color: rgb(0, 60, 128);
     font-weight: 700;
 }
 .list:hover {
